--- a/.gitignore
+++ b/.gitignore
@@ -121,7 +121,8 @@ fabric.properties
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -192,4 +193,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macOS,Windows,VisualStudioCode,Jetbrains
-n
+.idea/*
